--- a/src/app/features/po/po-card/po-card.component.html
+++ b/src/app/features/po/po-card/po-card.component.html
@@ -1,21 +1,26 @@
     <form [formGroup]="projectDetails" (ngSubmit)="submit()">
         <div class="row ">
-            <span class="m-r-35 p-l-15" *ngIf="!viewMode">
+            <span class="m-r-35 p-l-15">
                 P.O.No.:
-                <mat-form-field class="border-input">
-                    <input matInput type="string" formControlName="orderNo" placeholder="Project No." class="m-r-5" />
-                </mat-form-field>
+                <span *ngIf="mode!='edit'; else editBlock">{{cardData.poNumber}}</span>
+                <ng-template #editBlock>
+                    <mat-form-field class="border-input">
+                        <input matInput type="string" formControlName="orderNo" placeholder="Project No."
+                            class="m-r-5" />
+                    </mat-form-field>
+                </ng-template>
             </span>
-            <span *ngIf="viewMode" class="m-r-35 p-l-15">P.O.No.:.{{cardData.poNumber}}</span>
-            <span *ngIf="!viewMode">
+            <span *ngIf="mode!='edit'else editDateBlock">
+                P.O.Vaid Till: {{cardData.poValidUpto |date}}
+            </span>
+            <ng-template #editDateBlock>
                 P.O.Vaid Till:
                 <mat-form-field class="border-input">
                     <input matInput formControlName="endDate" [matDatepicker]="endDate" placeholder="Required Date" />
                     <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
                     <mat-datepicker #endDate startView="month"></mat-datepicker>
                 </mat-form-field>
-            </span>
-            <span *ngIf="viewMode">P.O.Vaid Till:{{cardData.poValidUpto}}</span>
+            </ng-template>
         </div>
         <mat-grid-list cols="2" rowHeight="100px" class="poCard">
             <mat-grid-tile [colspan]="1" [rowspan]="2" class="first-mat-grid">
@@ -30,12 +35,13 @@
                                 <mat-list-item mat-subheader> Contact Person:<span>
                                         {{cardData.projectAddress.firstName?cardData.projectAddress.firstName:""}}
                                         {{cardData.projectAddress.lastName?cardData.projectAddress.lastName:""}}</span>
-
-                                    <a href="javascript:void(0)"
-                                        (click)="openDialog('projectUserId',cardData.projectId)"><i
-                                            class="material-icons main-color">
-                                            edit
-                                        </i></a>
+                                    <span *ngIf="mode==='edit'">
+                                        <a href="javascript:void(0)"
+                                            (click)="openDialog('projectUserId',cardData.projectId)"><i
+                                                class="material-icons main-color">
+                                                edit
+                                            </i></a>
+                                    </span>
                                 </mat-list-item>
                                 <mat-list-item mat-subheader> Phone
                                     No.:<span>{{cardData.projectAddress.contactNo?cardData.projectAddress.contactNo:""}}</span>
@@ -48,12 +54,14 @@
                         <div class="col-xs-6">
                             <mat-list class="delivery-address-po-card">
                                 <mat-list-item mat-subheader> Delivery Address</mat-list-item>
-                                <span>{{cardData.projectAddress.addressLine1}}</span> <br>
+                                <span>{{cardData.projectAddress.addressLine1?cardData.projectAddress.addressLine1:""}}</span>
+                                <br>
                                 <span
                                     *ngIf="cardData.projectAddress.addressLine2">{{cardData.projectAddress.addressLine2}}
                                     <br></span>
-                                <span>{{cardData.projectAddress.city}},{{cardData.projectAddress.state}}</span> <br>
-                                <span>{{cardData.projectAddress.pinCode }}</span>
+                                <span>{{cardData.projectAddress.city?cardData.projectAddress.city:""}},{{cardData.projectAddress.state?cardData.projectAddress.state:""}}</span>
+                                <br>
+                                <span>{{cardData.projectAddress.pinCode?cardData.projectAddress.pinCode:""}}</span>
                             </mat-list>
                         </div>
                     </div>
@@ -64,27 +72,33 @@
                     <mat-list>
                         <h3 mat-subheader class="header-card-po">Purchase Order Awarded To:</h3>
                         <mat-list-item mat-subheader> Supplier Name:
-                            <span>{{cardData.supplierAddress.supplierName}}</span>
+                            <span>{{cardData.supplierAddress.supplierName?cardData.supplierAddress.supplierName:""}}</span>
                         </mat-list-item>
                         <mat-list-item mat-subheader> Contact Person:
-                            <span>{{cardData.supplierAddress.supplierName}}</span>
+                            <span>{{cardData.supplierAddress.supplierName?cardData.supplierAddress.supplierName:""}}</span>
 
                         </mat-list-item>
-                        <mat-list-item mat-subheader> Phone No.:<span> {{cardData.supplierAddress.contactNo}}</span>
+                        <mat-list-item mat-subheader> Phone No.:<span>
+                                {{cardData.supplierAddress.contactNo?cardData.supplierAddress.contactNo:""}}</span>
                         </mat-list-item>
                         <mat-list-item mat-subheader> Street Address:
-                            <span>{{cardData.supplierAddress.contactNo}}</span>
-                            <a href="javascript:void(0)"
-                                (click)="openaddressDialog('supplierAddressId',cardData.supplierAddress.supplierId)"><i
-                                    class="material-icons main-color">
-                                    edit
-                                </i></a>
+                            <span>{{cardData.supplierAddress.contactNo?cardData.supplierAddress.contactNo:""}}</span>
+                            <span *ngIf="mode==='edit'">
+                                <a href="javascript:void(0)"
+                                    (click)="openaddressDialog('supplierAddressId',cardData.supplierAddress.supplierId)"><i
+                                        class="material-icons main-color">
+                                        edit
+                                    </i></a>
+                            </span>
                         </mat-list-item>
-                        <mat-list-item mat-subheader> Pin Code: <span>{{cardData.supplierAddress.pinCode}}</span>
+                        <mat-list-item mat-subheader> Pin Code:
+                            <span>{{cardData.supplierAddress.pinCode?cardData.supplierAddress.pinCode:""}}</span>
                         </mat-list-item>
-                        <mat-list-item mat-subheader> City:<span>{{cardData.supplierAddress.city}} </span>
+                        <mat-list-item mat-subheader>
+                            City:<span>{{cardData.supplierAddress.city?cardData.supplierAddress.city:""}} </span>
                         </mat-list-item>
-                        <mat-list-item mat-subheader> GSTIN: <span>{{cardData.supplierAddress.gstNo}}</span>
+                        <mat-list-item mat-subheader> GSTIN:
+                            <span>{{cardData.supplierAddress.gstNo?cardData.supplierAddress.gstNo:""}}</span>
                         </mat-list-item>
                     </mat-list>
                 </div>
@@ -101,12 +115,13 @@
                                 <mat-list-item mat-subheader> Contact Person:
                                     <span>{{cardData.billingAddress.firstName}}
                                         {{cardData.billingAddress.lastName}}</span>
-
-                                    <a href="javascript:void(0)"
-                                        (click)="openDialog('projectBillingUserId',cardData.projectId)"><i
-                                            class="material-icons main-color">
-                                            edit
-                                        </i></a>
+                                    <span *ngIf="mode==='edit'">
+                                        <a href="javascript:void(0)"
+                                            (click)="openDialog('projectBillingUserId',cardData.projectId)"><i
+                                                class="material-icons main-color">
+                                                edit
+                                            </i></a>
+                                    </span>
                                 </mat-list-item>
                                 <mat-list-item mat-subheader> Phone
                                     No.:<span>{{cardData.billingAddress.contactNo}}</span>
@@ -117,11 +132,14 @@
                             <div class="col-xs-6">
                                 <mat-list-item mat-subheader> Street Address:
                                     <span> {{cardData.billingAddress.addressLine1}}
-                                        {{cardData.billingAddress.addressLine2}}</span><a href="javascript:void(0)"
-                                        (click)="openaddressDialog('projectBillingAddressId',cardData.projectId)"><i
-                                            class="material-icons main-color">
-                                            edit
-                                        </i></a></mat-list-item>
+                                        {{cardData.billingAddress.addressLine2}}</span>
+                                    <span *ngIf="mode==='edit'">
+                                        <a href="javascript:void(0)"
+                                            (click)="openaddressDialog('projectBillingAddressId',cardData.projectId)"><i
+                                                class="material-icons main-color">
+                                                edit
+                                            </i></a></span>
+                                </mat-list-item>
 
                                 <mat-list-item mat-subheader> Pin Code:<span>{{cardData.billingAddress.pinCode}}</span>
                                 </mat-list-item>
