--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -67,7 +67,8 @@
                 <ng-container matColumnDef="ViewPo">
                   <th mat-header-cell *matHeaderCellDef></th>
                   <td mat-cell *matCellDef="let element">
-                    <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId,'requiredApproval']">view po</a>
+                    <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId]"
+                      [state]="{mode:'requiredApproval'}">view po</a>
                   </td>
                 </ng-container>
 
@@ -129,7 +130,8 @@
                 <ng-container matColumnDef="ViewPo">
                   <th mat-header-cell *matHeaderCellDef></th>
                   <td mat-cell *matCellDef="let element">
-                    <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId,'edit']">view po</a>
+                    <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId]" [state]="{mode:'edit'}">view
+                      po</a>
                   </td>
                 </ng-container>
 
@@ -191,7 +193,8 @@
                 <ng-container matColumnDef="ViewPo">
                   <th mat-header-cell *matHeaderCellDef></th>
                   <td mat-cell *matCellDef="let element">
-                    <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId,'view']">view po</a>
+                    <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId]" [state]="{mode:'view'}">view
+                      po</a>
                   </td>
                 </ng-container>
 
