--- a/src/app/shared/dialogs/selectPoApprover/selectPo.html
+++ b/src/app/shared/dialogs/selectPoApprover/selectPo.html
@@ -8,7 +8,10 @@
             <mat-divider></mat-divider>
         </div>
     </mat-radio-group>
-    <button mat-raised-button class="main-background-color main-button color-white center-element" (click)="sendPo()">
+    <div class="m-0-auto send-btn-select-po">
+        <button mat-raised-button class="main-background-color main-button color-white" (click)="sendPo()">
         Send
     </button>
+    </div>
+    
 </div>
