--- a/src/app/shared/dialogs/select-po-role/selectPoRole.html
+++ b/src/app/shared/dialogs/select-po-role/selectPoRole.html
@@ -33,9 +33,12 @@
                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
            </table>
-           <button mat-raised-button class="main-background-color main-button color-white center-element"
+           <div class="p-t-10 m-0-auto">
+            <button mat-raised-button class="main-background-color main-button color-white"
                (click)="selectRole()">
                {{this.data.roleType==="projectBillingUserId"?"Billing Person":"Project Person"}}
            </button>
+           </div>
+          
        </div>
    </form>
