redirection of add grn to po edetails and add column Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -10,7 +10,7 @@
         </div>
 
         <mat-accordion>
-            <div>
+            <div *ngIf="grnHeaders">
                 <mat-expansion-panel class="myPanel" *ngFor="let grnHeader of grnHeaders">
                     <mat-expansion-panel-header>
                         <mat-panel-title>
