--- a/src/app/features/po/add-grn/add-grn.component.html
+++ b/src/app/features/po/add-grn/add-grn.component.html
@@ -42,6 +42,11 @@
                             <td mat-cell *matCellDef="let element">{{ element.materialName }}</td>
                         </ng-container>
 
+                         <ng-container matColumnDef="Brand Name">
+                            <th mat-header-cell *matHeaderCellDef>Brand Name</th>
+                            <td mat-cell *matCellDef="let element">{{ element.materialBrand }}</td>
+                        </ng-container>
+
                         <ng-container matColumnDef="Awarded Quantity">
                             <th mat-header-cell *matHeaderCellDef>Awarded Quantity</th>
                             <td mat-cell *matCellDef="let element">
