--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -25,7 +25,7 @@
                 <app-po-card #poCard *ngIf="tableData.length" [cardData]="cardData" [mode]="this.poMode">
                 </app-po-card>
             </div>
-            <app-po-table #poTable *ngIf="tableData.length" [poTableData]="tableData" [viewMode]="this.poMode">
+            <app-po-table #poTable *ngIf="tableData.length" [poTableData]="tableData" [mode]="this.poMode">
             </app-po-table>
         </div>
 
